ResponseHandler update